cart sum spacing fix

--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ nav ul li a {
     margin: 0;
 }
 
-#totalSum {
+.totalSum-container p {
     font-weight: bold;
 }
 
